# rust_proto_backend_template

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  Caddyfile  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  justfile  rust-toolchain.toml  rustfmt.toml
.github/workflows/: main.yml
assets/env/: samplecontext-samplecomponent-sampleservice-v1.env
crates/common/: Cargo.toml
crates/common/src/: lib.rs  net.rs  tracing.rs
crates/generated-proto-samplecontext/: Cargo.toml
crates/samplecontext-samplecomponent-sampleservice-v1/: Cargo.toml
crates/samplecontext-samplecomponent-sampleservice-v1/src/: main.rs  service.rs
proto/samplecontext/samplecomponent/sampleservice/v1/: sampleservice.proto
